# iic-ralf

./: .gitignore  README.md  circuit_capture_eval.py  iic-ralf.code-workspace  init_cells.py  main.py  place_circuit.py  place_route_circuit.py  placement_stats.py  placement_test.py  pyproject.toml  rl_placement.py  routing.py  rp_placement.py  ruff.toml
Environment/: Environment.py  RUDY.py  utils.py
Magic/: Cell.py  magic_die.py  magic_terminal.py  utils.py
PDK/: PDK.py  layers.py
PPO/: placement_ppo.py  utils.py
Routing_v2/: utils.py
Rules/: net_rules.py  utils.py
SchematicCapture/: Circuit.py  Net.py
environment/: Environment.py  RUDY.py  cell_sliding.py  environment.py
lef_def_parser/: cell_learn.py  def_parser.py  def_util.py  extract_cell.py  lef_parser.py  lef_util.py  plot_cell.py  split_def.py  util.py
logs/: plot_csv_logs.py  plot_csv_logs_simanneal.py
magic/: Cell.py  DRC.py  Magic.py  macro_cell.py  magic_die.py  magic_layer.py  magic_parser.py  magic_terminal.py  magic_terminal_utils.py  utils.py
network/: D2RL_Actor.py  D2RL_Critic.py  D2RL_Policy.py  GAT_D2RL_Actor.py  GAT_D2RL_Critic.py  GAT_Policy.py
placement_circuits/: DiffAmp_placement.pkl
rectangle_packing_placement/: cell_sliding.py  placement_floorplan.py  placement_problem.py  placement_sequence_pair.py  placement_solution.py  placement_solver.py  placement_visualizer.py  utils.py
routing_v2/: utils.py
rules/: Rule.py  net_rules.py  placement_rules.py  routing_rules.py  utils.py
schematic_capture/: circuit.py  devices.py  net.py  netlist.py  ng_spice_parser.py  (+4 more)
(+52 files in other folders)
