[project]
name = "iic-ralf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.7",
    "myst-parser>=3.0.1",
    "networkx==3.1",
    "numpy==1.25.1",
    "pandas==2.0.3",
    "prettytable==3.9.0",
    "pygame==2.5.0",
    "rtree==1.0.1",
    "scikit-learn==1.3.0",
    "simanneal==0.5.0",
    "sphinx>=7.4.7",
    "torch==2.0.1",
    "torch-geometric==2.3.1",
    "tqdm==4.65.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]
